# data_collection_pipeline

./: README.md  README2.md  environment.yml
data/test_traj/: demonstration.csv
data_collection/: CMakeLists.txt
data_collection/src/: cartesian_motion.cpp  communication_test.cpp  impedance_control.cpp  impedance_control_save_data.cpp  joint_motion.cpp
